fix(side-menu): corrected logic for sddsCollapse and internalSddsSideMenuPropChange event

--- a/tegel/src/components/side-menu/webcomponent/side-menu-collapse-button/side-menu-collapse-button.scss
+++ b/tegel/src/components/side-menu/webcomponent/side-menu-collapse-button/side-menu-collapse-button.scss
@@ -23,6 +23,10 @@
       position: absolute;
       left: 50%;
     }
+
+    .test {
+      display: none;
+    }
   }
 }
 
